--- a/24007589/index.html
+++ b/24007589/index.html
@@ -286,7 +286,7 @@
     <div class="social-icons">
         <a href="https://www.linkedin.com/in/hafidz-haqmi/" target="_blank">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="social-icon" data-bs-toggle="tooltip" data-bs-placement="right" title="Go to Hafidz's linkedin"></a>
-        <a href="https://github.com/hafidzhaqmi" target="_blank">
+        <a href="https://github.com/hafidz-haqmi" target="_blank">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="social-icon" data-bs-toggle="tooltip" data-bs-placement="right" title="Go to Hafidz's github"></a>
         <a href="https://discord.com/" target="_blank">
             <img src="https://www.svgrepo.com/show/353655/discord-icon.svg" class="social-icon" data-bs-toggle="tooltip" data-bs-placement="right" title="Go to Hafidz's discord"></a>
