--- a/24007589/index.html
+++ b/24007589/index.html
@@ -209,7 +209,7 @@
                 <div class="reference-item">
                     <h4 class="reference-name">Pn. Aminah Yaman</h4>
                     <p class="reference-position">Head of Forwarding Department</p>
-                    <p class="reference-company">Lumut Venture Sdn Bhd</p>
+                    <p class="reference-company">Kudrat Venture Sdn Bhd</p>
                     <div class="reference-contact">
                         <i class="bi bi-telephone-fill"></i>
                         <span>+6013-400 1732</span>
@@ -219,7 +219,7 @@
                 <div class="reference-item">
                     <h4 class="reference-name">En. Iffat Muhibul Hasni</h4>
                     <p class="reference-position">Executive (Logistics Planning)</p>
-                    <p class="reference-company">PCFK (PETRONAS)</p>
+                    <p class="reference-company">PETRONAS</p>
                     <div class="reference-contact">
                         <i class="bi bi-telephone-fill"></i>
                         <span>+6019-500 8110</span>
@@ -229,7 +229,7 @@
                 <div class="reference-item">
                     <h4 class="reference-name">En. Amirul Changkat Khalid</h4>
                     <p class="reference-position">Industrial Training Lecturer</p>
-                    <p class="reference-company">UniKL (MITEC)</p>
+                    <p class="reference-company">UniKL</p>
                     <div class="reference-contact">
                         <i class="bi bi-telephone-fill"></i>
                         <span>+6019-200 8478</span>
